# rag-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile
apps/api/: .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_retrieval_trace_metrics.py  003_add_feedback_to_messages.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: auth.py  chat.py  conversations.py  documents.py  evaluation.py  health.py  stats.py
apps/api/app/core/: config.py  logging.py  rate_limit.py  security.py  security_headers.py  telemetry.py
apps/api/app/db/models/: __init__.py  (+8 more)
apps/api/app/schemas/: auth.py  chat.py  conversation.py  document.py  evaluation.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: auth_service.py  document_service.py  email_service.py  embedding_service.py  evaluation_service.py  generation_service.py  llm_provider.py  qdrant_service.py  query_expansion_service.py  query_router_service.py  rerank_service.py  retrieval_pipeline.py  retrieval_service.py  storage_service.py
apps/api/app/tasks/: celery_app.py
apps/api/tests/: conftest.py  test_auth_me.py  test_chat_contract.py  test_confidence.py  test_conversations_lifecycle.py  test_cors_config.py  test_documents_chunks.py  test_documents_filters.py  test_dynamic_context.py  test_embedding_cache.py  test_embedding_idf.py  test_evaluation_metrics.py  test_health.py  test_qdrant_acl.py  test_query_expansion.py  test_rate_limit.py  test_rerank_cache.py  test_rerank_early_stop.py  test_retrieval_pipeline.py  test_router.py  test_security_headers.py
workers/ingestion/: Dockerfile  Dockerfile.prod  pyproject.toml
workers/ingestion/app/: config.py  db.py  worker.py
workers/ingestion/app/services/: chunker.py  embedder.py  idf_service.py  indexer.py  parser.py  storage.py
workers/ingestion/app/tasks/: chunk_document.py  delete_document.py  embed_document.py  index_document.py  parse_document.py  rebuild_idf.py
workers/ingestion/tests/: conftest.py  test_chunker.py  test_embedder_idf.py  test_idf_service.py  test_ingestion_pipeline.py  test_lifecycle_smoke.py  test_parser.py
(+44 files in other folders)
