[project]
name = "rag-api"
version = "0.1.0"
description = "RAG Platform API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "structlog>=24.1",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0,<4.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "redis>=5.0",
  "celery>=5.4",
  "minio>=7.2",
  "qdrant-client>=1.10",
  "numpy>=1.26",
  "prometheus-fastapi-instrumentator>=7.0",
  "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff==0.15.8",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008 is a false positive for FastAPI: Depends() / File() are required as defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
