[project]
name = "rag-worker"
version = "0.1.0"
description = "RAG ingestion worker (Celery)"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "minio>=7.2",
    "qdrant-client>=1.10",
    "python-magic>=0.4.27",
    "numpy>=1.26",
    "httpx>=0.27",
    "tenacity>=8.3",
    "docling>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff==0.15.8",
    "fakeredis>=2.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
